Bug 60647 - "access this connection" wrong with event MPM
Summary: "access this connection" wrong with event MPM
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: Core (show other bugs)
Version: 2.5-HEAD
Hardware: PC Linux
: P2 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords: FixedInTrunk
Depends on:
Blocks:
 
Reported: 2017-01-25 20:30 UTC by Eric Covener
Modified: 2019-05-27 23:21 UTC (History)
1 user (show)



Attachments
keep conn_count more accurate (2.43 KB, patch)
2017-01-25 20:30 UTC, Eric Covener
Details | Diff
remove test val (2.39 KB, patch)
2017-01-25 21:56 UTC, Eric Covener
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Covener 2017-01-25 20:30:43 UTC
Created attachment 34676 [details]
keep conn_count more accurate

The first field of ACC in /server-status is requests on the current connection.

With event, a connection hops from slot to slot, only visible while it's being processed.

These values are currently always zero w/ trunk and 2.4 under event.

ap_increment_counts() tracks this stuff per-slot and event causes it to be blown away in worker_thread() right before process_socket.

I have a patch that just allows ap_process_http_async_connection to push a new "requests on current connection" onto the scoreboard handle for the slot its currently using.  This is a bit of an odd place to fix up the connection count, but the ap_increment_counts is currently only called by the eor_bucket and I didn't want to put async vs. not async logic there.
Comment 1 Eric Covener 2017-01-25 21:56:20 UTC
Created attachment 34678 [details]
remove test val
Comment 2 Graham Leggett 2019-05-27 23:21:37 UTC
Backported to v2.4.40.